Fixed uneven images

--- a/scss/components/base.scss
+++ b/scss/components/base.scss
@@ -419,6 +419,7 @@ p.description_content {
 }
 
 .card_bullets {
+	float: left;
 	position: relative;
 	width: 92%;
 	margin: 2%;
